# thermal_control

./: .clang-format  CMakeLists.txt  README.md  TASK.md  VALIDATION.md
main/: CMakeLists.txt  main.c
main/modules/app/: app.c  app.h  app_state_machine.c  app_state_machine.h
main/modules/common/: config.h  defines.h  types.h
main/modules/communication/: communication.c  communication.h  communication_task.c
main/modules/control/: filter.c  filter.h  pid.c  pid.h  thermal_control.c  thermal_control.h
main/modules/drivers/: adc_drv.c  adc_drv.h  gpio_drv.c  gpio_drv.h  pwm_drv.c  pwm_drv.h
main/modules/logger/: logger.c  logger.h  logger_task.c
main/modules/safety/: safety.c  safety.h
main/modules/sensors/: ntc_sensor.c  ntc_sensor.h
main/modules/thermal/: thermal.c  thermal.h  thermal_task.c
test/: test_control.c
