idf_component_register(
    SRCS
        "main.c"
        "modules/app/app.c"
        "modules/control/filter.c"
        "modules/control/pid.c"
        "modules/control/thermal_control.c"
        "modules/drivers/adc_drv.c"
        "modules/drivers/gpio_drv.c"
        "modules/drivers/pwm_drv.c"
        "modules/sensors/ntc_sensor.c"
    INCLUDE_DIRS
        ".")
