idf_component_register(
    SRCS
        "main.c"
        "modules/app/app.c"
        "modules/app/app_state_machine.c"
        "modules/control/filter.c"
        "modules/control/pid.c"
        "modules/control/thermal_control.c"
        "modules/drivers/adc_drv.c"
        "modules/drivers/gpio_drv.c"
        "modules/drivers/pwm_drv.c"
        "modules/logger/logger.c"
        "modules/logger/logger_task.c"
        "modules/safety/safety.c"
        "modules/sensors/ntc_sensor.c"
        "modules/thermal/thermal.c"
        "modules/thermal/thermal_task.c"
    INCLUDE_DIRS
        ".")
